cabal-version:      2.4
name:               notakto
version:            0.0.0.1
author:             ashe
maintainer:         git@aas.sh
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Lib
  hs-source-dirs:   src/lib
  build-depends:
    base,
    apecs,
    h-raylib
  other-modules:
    Rendering,
    Types,
    Util
  default-language: Haskell2010

executable notakto
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    base,
    notakto
  if os(windows)
    ghc-options: -optl-mconsole
  default-language: Haskell2010

test-suite notakto-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base
